# FrameOfReference

./: .travis.yml  CMakeLists.txt  Makefile  README.md  sampledata.txt
include/: bpacking.h  common.h  compression.h  turbocompression.h  turbopacking32.h  turbopacking64.h  util.h
scripts/: turbopacking32.py  turbopacking64.py
src/: bpacking.cpp  test.cpp
